<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/trans_black_80">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:background="@drawable/background_color_secondary"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/loadingComplete"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_fileName="loading_complete.json"
            app:lottie_loop="false"
            app:lottie_repeatCount="0" />

        <TextView
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/open_sans_semi_bold"
            android:gravity="center"
            android:text="@string/report_is_ready_"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/loadingComplete" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/viewButton"
            android:layout_width="250dp"
            android:layout_height="55dp"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/colorPrimary"
            android:fontFamily="@font/open_sans_bold"
            android:minWidth="150dp"
            android:text="@string/view"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:cornerRadius="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/message" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/closeButton"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="250dp"
            android:layout_height="55dp"
            android:fontFamily="@font/open_sans_bold"
            android:minWidth="150dp"
            android:text="@string/close"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp"
            app:cornerRadius="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewButton"
            app:strokeColor="@color/colorPrimary"
            app:strokeWidth="2dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>