<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSecondary">

    <io.github.florent37.shapeofview.shapes.ArcView
        android:id="@+id/arcView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintTop_toTopOf="parent"
        app:shape_arc_height="50dp"
        app:shape_arc_position="bottom">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark" />
    </io.github.florent37.shapeofview.shapes.ArcView>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:minHeight="?attr/actionBarSize"
        app:contentInsetEnd="0dp"
        app:contentInsetStart="0dp"
        app:elevation="0dp"
        app:layout_collapseMode="pin"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/back"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="12dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:padding="10dp"
                android:src="@drawable/ic_arrow_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/toolbarTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/open_sans_bold"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ipScoreBg"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@color/colorAccent"
        android:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/arcView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/arcView"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.CornerSize50Percent" />

    <TextView
        android:id="@+id/ipScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="15dp"
        android:fontFamily="@font/open_sans_extra_bold"
        android:text="6.4"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="@+id/ipScoreBg"
        app:layout_constraintEnd_toEndOf="@+id/ipScoreBg"
        app:layout_constraintStart_toStartOf="@+id/ipScoreBg"
        app:layout_constraintTop_toTopOf="@+id/ipScoreBg" />

    <TextView
        android:id="@+id/ipScoreLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="15dp"
        android:fontFamily="@font/open_sans_semi_bold"
        android:text="IP Score \u2122"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/ipScoreBg"
        app:layout_constraintStart_toStartOf="@+id/ipScoreBg"
        app:layout_constraintTop_toBottomOf="@+id/ipScoreBg" />

    <TextView
        android:id="@+id/ipScoreDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/open_sans_semi_bold_italic"
        android:gravity="center"
        android:text="@string/view_tweets"
        android:textColor="@color/nines"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@+id/ipScoreLabel" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonAction"
        app:layout_constraintTop_toBottomOf="@+id/ipScoreDescription">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/frequentWords"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/frequent_words"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/ipScoreDescription" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:clipToPadding="false" />

            <TextView
                android:id="@+id/viewTweets"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_semi_bold_italic"
                android:foreground="?android:attr/selectableItemBackground"
                android:lineSpacingExtra="2dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/view_tweets"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@+id/purchaseAdviceLabel" />

            <TextView
                android:id="@+id/purchaseAdviceLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/purchase_advice"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/frequentWords" />

            <TextView
                android:id="@+id/purchaseAdvice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/open_sans_regular"
                android:lineSpacingExtra="2dp"
                android:text="@string/lorem_ipsium_"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@+id/purchaseAdviceLabel" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <TextView
        android:id="@+id/startsFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/open_sans_italic"
        android:text="@string/starts_from"
        android:textColor="@color/black"
        android:textSize="11sp"
        app:layout_constraintBottom_toTopOf="@+id/price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonAction"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_extra_bold_italic"
        android:text="€ 900.00"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/buttonAction"
        app:layout_constraintStart_toStartOf="@+id/startsFrom"
        app:layout_constraintTop_toBottomOf="@+id/startsFrom" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonAction"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/colorAccent"
        android:drawableTint="@color/white"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/buy_now"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:cornerRadius="25dp"
        app:icon="@drawable/ic_buy"
        app:iconGravity="textStart"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>
